--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>ca-pub-9152598639236343"
   <meta charset="UTF-8">
   <title>AI Chat (Hindi + English)</title>
   <style>
@@ -74,3 +74,4 @@
 
 </body>
 </html>
+
